v1/changelog.mdx
---
title: "Changelog"
description: "Latest updates and improvements to Salsa as a Service"
---

# Changelog

Stay up to date with the latest features, improvements, and bug fixes in Salsa as a Service.

## Version 2.4.0 - January 15, 2024

### 🚀 New Features

#### Advanced Analytics Dashboard
- **Predictive Analytics: New AI-powered forecasting system that predicts salsa demand based on historical data, weather patterns, and local events**
- **Custom Report Builder: Drag-and-drop interface for creating custom reports and dashboards**
- **Real-time Performance Metrics: Live tracking of production efficiency, waste reduction, and quality scores**
- **Comparative Analytics: Side-by-side comparison of different recipes and production methods**

#### Enhanced Mobile Experience
- **Offline Mode: Full functionality available without internet connection**
- **Barcode Scanning: Quick ingredient addition using your phone's camera**
- **Voice Commands: Hands-free operation for busy kitchen environments**
- **Push Notifications: Instant alerts for quality issues, low stock, and production milestones**

#### Smart Inventory Management
- **Automated Reordering: AI-powered system that automatically orders ingredients when stock runs low**
- **Supplier Integration: Direct connection with major food suppliers for seamless ordering**
- **Expiry Tracking: Smart alerts for ingredients approaching expiration**
- **Cost Optimization: Recommendations for reducing ingredient costs without compromising quality**

### 🔧 Improvements

- **Performance**: 40% faster page load times across all platforms
- **API**: Enhanced API with new endpoints for advanced integrations
- **Security**: Upgraded encryption and added two-factor authentication
- **Accessibility**: Improved screen reader support and keyboard navigation

### 🐛 Bug Fixes

- Fixed issue where production batches weren't syncing with POS systems
- Resolved mobile app crashes on iOS 17.2
- Fixed inventory count discrepancies in multi-location accounts
- Corrected quality score calculations for certain recipe types

---

## Version 2.3.2 - December 20, 2023

### 🔧 Improvements

#### Integration Enhancements
- **Square POS**: Improved sync reliability and added support for Square's latest API version
- **Toast Integration**: Enhanced data mapping for complex menu structures
- **Clover App**: Updated to support Clover's new app marketplace requirements

#### User Experience
- **Dashboard Redesign**: Cleaner, more intuitive interface with customizable widgets
- **Mobile App**: Improved navigation and gesture support
- **Search Functionality**: Enhanced search with filters and suggestions

### 🐛 Bug Fixes

- Fixed authentication issues with certain enterprise SSO configurations
- Resolved data export formatting problems in Excel files
- Fixed notification delivery issues for some email providers
- Corrected timezone handling in production reports

---

## Version 2.3.1 - December 5, 2023

### 🔧 Improvements

#### Performance Optimizations
- **Database**: Optimized queries for faster data retrieval
- **Caching**: Improved caching strategy for better performance
- **API**: Reduced API response times by 25%

#### Security Updates
- **SSL/TLS**: Upgraded to latest security protocols
- **Data Encryption**: Enhanced encryption for sensitive data
- **Access Control**: Improved permission management

### 🐛 Bug Fixes

- Fixed issue where some users couldn't access their accounts after password reset
- Resolved mobile app login problems on Android devices
- Fixed inventory sync issues with certain POS systems
- Corrected calculation errors in waste tracking reports

---

## Version 2.3.0 - November 18, 2023

### 🚀 New Features

#### Multi-Location Management
- **Centralized Dashboard: Manage all restaurant locations from a single interface**
- **Location-Specific Settings: Customize settings for each location while maintaining brand consistency**
- **Cross-Location Analytics: Compare performance across different locations**
- **Unified Reporting: Generate reports that span multiple locations**

#### Advanced Quality Control
- **Automated Testing: IoT sensor integration for real-time quality monitoring**
- **Quality Alerts: Instant notifications when quality scores fall below thresholds**
- **Batch Tracking: Complete traceability from ingredient to finished product**
- **Compliance Reporting: Automated generation of food safety compliance reports**

#### Team Collaboration
- **Role-Based Permissions: Granular control over what each team member can access**
- **Task Assignment: Assign specific tasks to team members with due dates**
- **Communication Tools: Built-in messaging system for team coordination**
- **Training Modules: Interactive training content for new team members**

### 🔧 Improvements

- **User Interface**: Redesigned navigation and improved user experience
- **Data Export**: Enhanced export options with custom formatting
- **Integration**: Improved reliability of third-party integrations
- **Mobile App**: Better offline functionality and sync capabilities

### 🐛 Bug Fixes

- Fixed issue where production data wasn't saving correctly
- Resolved problems with ingredient unit conversions
- Fixed notification delivery issues
- Corrected calculation errors in cost analysis reports

---

## Version 2.2.1 - October 30, 2023

### 🔧 Improvements

#### API Enhancements
- **New Endpoints**: Added endpoints for advanced analytics and reporting
- **Rate Limiting**: Improved rate limiting with better error messages
- **Documentation**: Enhanced API documentation with more examples

#### Performance
- **Database**: Optimized database queries for better performance
- **Caching**: Improved caching for frequently accessed data
- **CDN**: Enhanced content delivery for faster loading

### 🐛 Bug Fixes

- Fixed issue where some users experienced slow loading times
- Resolved problems with data synchronization
- Fixed mobile app crashes on certain devices
- Corrected issues with email notifications

---

## Version 2.2.0 - October 15, 2023

### 🚀 New Features

#### AI-Powered Insights
- **Demand Forecasting: Machine learning algorithms predict salsa demand based on historical data**
- **Quality Optimization: AI recommendations for improving salsa quality and consistency**
- **Cost Analysis: Intelligent cost breakdown and optimization suggestions**
- **Trend Analysis: Identify patterns in customer preferences and production efficiency**

#### Enhanced Integrations
- **New POS Systems: Added support for Revel, TouchBistro, and Lightspeed**
- **Supply Chain Integration: Direct integration with major food distributors**
- **Accounting Software: Connect with QuickBooks, Xero, and other accounting platforms**
- **Business Intelligence: Integration with Tableau, Power BI, and other BI tools**

#### Mobile App Improvements
- **Offline Functionality: Full app functionality without internet connection**
- **Barcode Scanning: Quick ingredient addition using phone camera**
- **Voice Notes: Add voice notes to production batches and quality checks**
- **Photo Documentation: Capture photos of production processes and quality issues**

### 🔧 Improvements

- **User Experience**: Streamlined interface with better navigation
- **Performance**: 30% faster loading times across all platforms
- **Security**: Enhanced security measures and data protection
- **Accessibility**: Improved accessibility features for users with disabilities

### 🐛 Bug Fixes

- Fixed issue where inventory counts were incorrect after POS sync
- Resolved problems with recipe scaling calculations
- Fixed mobile app crashes on iOS devices
- Corrected issues with data export formatting

---

## Version 2.1.3 - September 28, 2023

### 🔧 Improvements

#### Bug Fixes and Performance
- **Data Sync**: Improved reliability of data synchronization with POS systems
- **Mobile App**: Fixed crashes and improved stability
- **Performance**: Optimized database queries for better performance
- **Security**: Updated security protocols and encryption

### 🐛 Bug Fixes

- Fixed issue where some users couldn't access their accounts
- Resolved problems with inventory tracking
- Fixed notification delivery issues
- Corrected calculation errors in reports

---

## Version 2.1.2 - September 10, 2023

### 🔧 Improvements

#### Integration Updates
- **Square POS**: Updated integration to support Square's latest API changes
- **Toast Integration**: Enhanced data mapping and sync reliability
- **Clover App**: Updated to meet Clover's new app requirements

#### User Experience
- **Dashboard**: Improved loading times and user interface
- **Mobile App**: Better offline functionality and sync
- **Notifications**: Enhanced notification system with better delivery

### 🐛 Bug Fixes

- Fixed issue where production batches weren't saving correctly
- Resolved problems with ingredient tracking
- Fixed mobile app login issues
- Corrected issues with data export

---

## Version 2.1.1 - August 25, 2023

### 🔧 Improvements

#### Performance and Stability
- **Database**: Optimized database performance for faster queries
- **API**: Improved API response times and reliability
- **Mobile App**: Enhanced stability and performance
- **Security**: Updated security measures and data protection

### 🐛 Bug Fixes

- Fixed issue where some users experienced data loss
- Resolved problems with POS integration
- Fixed mobile app crashes
- Corrected calculation errors in analytics

---

## Version 2.1.0 - August 10, 2023

### 🚀 New Features

#### Advanced Analytics
- **Custom Dashboards: Create personalized dashboards with relevant metrics**
- **Trend Analysis: Identify patterns in production and quality data**
- **Comparative Reports: Compare performance across different time periods**
- **Export Options: Enhanced data export with multiple formats**

#### Quality Management
- **Quality Scoring: Advanced quality scoring system with multiple criteria**
- **Batch Tracking: Complete traceability from ingredients to finished product**
- **Quality Alerts: Automated alerts for quality issues and deviations**
- **Compliance Reporting: Generate reports for food safety compliance**

#### Team Management
- **User Roles: Granular permission system for different user types**
- **Task Management: Assign and track tasks for team members**
- **Communication: Built-in messaging system for team coordination**
- **Training: Interactive training modules for new users**

### 🔧 Improvements

- **User Interface**: Redesigned interface with better navigation
- **Performance**: Improved loading times and responsiveness
- **Mobile App**: Enhanced mobile experience
- **Integrations**: Enhanced reliability of third-party integrations

### 🐛 Bug Fixes

- Fixed issue where inventory data wasn't syncing correctly
- Resolved problems with recipe management
- Fixed mobile app crashes on certain devices
- Corrected issues with data export

---

## Version 2.0.0 - July 15, 2023

### 🚀 Major Release

#### Complete Platform Redesign
- **New Interface**: Completely redesigned user interface with modern design**
- **Enhanced Performance**: 50% faster loading times and improved responsiveness**
- **Mobile-First Design: Optimized for mobile devices with responsive design**
- **Accessibility**: Improved accessibility features and screen reader support**

#### New Core Features
- **Recipe Management: Advanced recipe management with version control**
- **Inventory Tracking: Real-time inventory tracking with automated alerts**
- **Production Monitoring: Comprehensive production monitoring and quality control**
- **Analytics Dashboard: Advanced analytics and reporting capabilities**

#### Integration Platform
- **POS Integration: Seamless integration with major POS systems**
- **API Access: Full API access for custom integrations**
- **Webhook Support: Real-time notifications and data synchronization**
- **Third-Party Apps: Integration with popular restaurant management tools**

### 🔧 Improvements

- **Security**: Enhanced security measures and data protection
- **Performance**: Optimized database and improved caching
- **Reliability**: Improved system reliability and uptime
- **Scalability**: Better scalability for large restaurant chains

### 🐛 Bug Fixes

- Fixed all known issues from previous versions
- Resolved data synchronization problems
- Fixed mobile app crashes and performance issues
- Corrected calculation errors in reports

---

## Previous Versions

> **Note:**
**Version History**: For a complete history of all versions and changes, visit our [GitHub repository](https://github.com/salsaasaservice/salsa-platform/releases).


### Version 1.x Series

The 1.x series was our initial release with basic salsa management features. We've since evolved significantly with the 2.x series, which includes:

- Complete platform redesign
- Advanced analytics and reporting
- Enhanced integrations
- Mobile-first approach
- Enterprise-grade security and scalability

## Release Schedule

### Regular Updates
- **Minor Updates**: Monthly releases with bug fixes and small improvements
- **Feature Updates**: Quarterly releases with new features and enhancements
- **Major Releases**: Annual releases with significant platform improvements

### Release Notes
- **Release Notes**: Detailed release notes are published with each update
- **Migration Guides**: Step-by-step guides for upgrading to new versions
- **Deprecation Notices**: Advance notice for features being removed or changed

## Feedback and Suggestions

We value your feedback and suggestions for improving Salsa as a Service. Here's how you can contribute:


**[Feature Requests](https://feedback.salsaasaservice.com)**  
Submit feature requests and vote on existing ones.

**[Bug Reports](https://bugs.salsaasaservice.com)**  
Report bugs and issues you encounter.

**[Community Forum](https://community.salsaasaservice.com)**  
Join our community to discuss features and share ideas.



## Stay Updated

> **Note:**
**Notifications**: Enable notifications in your account settings to receive updates about new features and improvements.


- **Email Updates**: Subscribe to our newsletter for product updates
- **In-App Notifications**: Get notified about new features directly in the app
- **Social Media**: Follow us on Twitter and LinkedIn for the latest news
- **Blog**: Read our blog for detailed feature announcements and tutorials
